# CareerGap

./: README.md  fix_rust_mcp.sh  package-lock.json  policies.yaml
.mcp/: agent-lightning.json  docker.json  git.json  node.json  playwright.json  rust.json  shell.json  skill-manager.json
aegis_installer/: .gitignore  README.md  package.json
aegis_installer/src/: index.html  main.js  style.css
aegis_installer/src-tauri/: Cargo.toml  tauri.conf.json
aegis_installer/src-tauri/src/: main.rs  usb_commands.rs
nogap-workspace/: .gitignore  AUTONOMOUS_SENSING.md  CLI.md  CLI_GUIDE.md  COMPREHENSIVE_PROJECT_REPORT.md  CORE.md  CSV_IMPORT_GUIDE.md  Cargo.toml  DASHBOARD.md  DEMO_VISUAL_GUIDE.md  PACKAGING.md  README.md  ROADMAP_BUTTON_WIRING.md  ROADMAP_DELIVERY_CHECKLIST.md  ROADMAP_GENERATION.md  ROADMAP_QUICKSTART.md  SENSING_IMPLEMENTATION.md  SENSING_QUICKSTART.md  STAGE_10_REPORT.md  STAGE_1_REPORT.md  STAGE_2_REPORT.md  STAGE_3_REPORT.md  STAGE_4_REPORT.md  STEP3_SUMMARY.md  STEP4_UI_CUES.md  SWOT.md  UI_VISUAL_PREVIEW.md  USER_MANUAL.md  VISUAL_ROADMAP_IMPLEMENTATION.md  output.csv  package-lock.json  report.json  report_ascii.json  simple.json  snapshots.db  test.json  test_report.json  test_report_utf8.json  test_resume.txt
nogap-workspace/backend/: Cargo.toml
nogap-workspace/backend/src/: api.rs  lib.rs  main.rs
nogap-workspace/backend/src/agent/: memory.rs  mod.rs  planner.rs  reflection.rs  resume_parser.rs  types.rs
nogap-workspace/frontend/: index.html  package-lock.json  package.json
nogap-workspace/frontend/src/: App.jsx  styles.css
nogap-workspace/integration_tests/: README.md  cli_to_core_test.rs  dashboard_integration.spec.ts  smoke_test.sh
nogap-workspace/nogap_cli/: Cargo.toml  README.md  STAGE1_SUMMARY.md
nogap-workspace/nogap_cli/src/: keymap.rs  lib.rs  main.rs  ui.rs
nogap-workspace/nogap_cli/src/components/: diff.rs  mod.rs  multiselect.rs  table.rs
nogap-workspace/nogap_cli/src/screens/: dashboard.rs  details.rs  mod.rs  snapshots.rs
nogap-workspace/nogap_cli/tests/: ui_smoke.rs  ui_snapshot.rs
nogap-workspace/nogap_core/: Cargo.toml  LOCAL_POLICY_IMPLEMENTATION.md  PLANNER.md  README.md  WEEK1_SUMMARY.md  WEEK2_SUMMARY.md  policies.yaml  snapshots.db
nogap-workspace/nogap_core/examples/: async_integrity.rs  auto_signer_demo.rs  autonomous_sensor.rs  complete_workflow.rs  test_linux_policies.rs
nogap-workspace/nogap_core/src/: ai_recommender.rs  auto_signer.rs  drift_detection.rs  engine.rs  lib.rs  ostree_lite.rs  planner.rs  policy_parser.rs  policy_sandbox.rs  privilege.rs  risk_scoring.rs  secure_workspace.rs  self_check.rs  sensor_scheduler.rs  signing.rs  snapshot.rs  types.rs
nogap-workspace/nogap_core/tests/: engine_transaction.rs  linux_platform_batch.rs  linux_platform_remaining.rs  week2_integration_test.rs  windows_local_policy_test.rs  windows_platform_batch.rs
nogap-workspace/nogap_dashboard/: BUILD_GUIDE.md  OSTREE_INTEGRATION.md  README.md  RELEASE.md  STAGE_10_REPORT.md  STAGE_11_REPORT.md  USB_FLOW.md  index.html  package-lock.json  package.json  playwright.config.ts  setup_build_targets.sh
nogap-workspace/nogap_dashboard/src/: App.tsx  csv_import.html  csv_import.js  index.html  main.js  styles.css  usb.html
nogap-workspace/nogap_dashboard/src-tauri/: Cargo.toml  snapshots.db  tauri.conf.json
nogap-workspace/nogap_dashboard/src-tauri/assets/: policies.yaml
nogap-workspace/nogap_dashboard/src-tauri/reports/: report_template.html
nogap-workspace/nogap_dashboard/src-tauri/src/: atomic.rs  commands_ostree.rs  elev_checks.rs  helpers.rs  lib.rs  main.rs  privilege.rs  reporting.rs  reporting_csv.rs  utils.rs  windows_registry.rs  windows_secedit.rs
nogap-workspace/nogap_installer/: Cargo.toml  README.md
nogap-workspace/nogap_installer/src/: main.rs
nogap-workspace/nogap_kiosk/: README.md  kiosk_backend.py  requirements.txt
nogap-workspace/nogap_mcp/: Cargo.toml  mcp.json
nogap-workspace/nogap_signer/: Cargo.toml
nogap-workspace/nogap_system_installer/: Cargo.toml  README.md
nogap-workspace/resume_parser/: DELIVERY_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  README.md  README_STATE_MACHINE.md  STATE_MACHINE_VISUAL.md  STRATEGY_STATE_MACHINE.md  agent_loop.py  bottleneck_analyzer.py  career_snapshot.py  evidence_mapper.py  parser.py  pipeline.py  requirements.txt  roadmap_generator.py  setup.bat  strategy_selector.py  test_roadmap_gating.py  test_state_machine.py
nogap-workspace/usb_authority_creator/: README.md  index.html  main.js  style.css  tauri_commands.rs
(+4 files in other folders)
