[package]
name = "career_agent"
version = "0.1.0"
edition = "2021"
description = "Agentic AI Career Development Assistant - Backend"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tempfile = "3"

[dev-dependencies]
actix-rt = "2"
