[package]
name = "nogap_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "nogap_cli"
path = "src/lib.rs"

[[bin]]
name = "nogap-cli"
path = "src/main.rs"

[dependencies]
nogap_core = { path = "../nogap_core" }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
csv = "1.3"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3