[package]
name = "nogap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.8"
rusqlite = { version = "0.31", features = ["bundled"] }
rsa = "0.9"
rand = "0.8"
signature = "2.2"
crossbeam-channel = "0.5"
thiserror = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"