[package]
name = "nogap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.8"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rsa = "0.9"
rand = "0.8"
signature = "2.2"
crossbeam-channel = "0.5"
thiserror = "1"
regex = "1"
encoding_rs = "0.8"
log = "0.4"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "winbase"]

[dev-dependencies]
tempfile = "3.8"