[package]
name = "nogap_dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nogap_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
nogap_core = { path = "../../nogap_core" }
anyhow = "1.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["time"] }
dirs = "5.0"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_Storage_FileSystem"] }
encoding_rs = "0.8"
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

